--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
 
         <!--单元测试-->
         <dependency>
