--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,6 @@ spring:
         max-wait: 10000
 
 mybatis:
-  type-aliases-package: com.pcy.redis.pojo
+  type-aliases-package: cn.hfut.huangshan.pojo
   mapper-locations: classpath:mapper/*.xml
 
