Finish JWT. Ref #2

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.62</version>
         </dependency>
+        <!--spring-session-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
 
         <!--整合Mybatis-->
         <dependency>
