--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
     database: 0
     host: 101.37.173.73
     port: 6379
-    password: PCY90321
+    password: Pcy903215488
     timeout: 5000
     block-when-exhausted: true
     jedis:
